readme and build

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "keyspeaker",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
+  "homepage": "/keyspeaker",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
