Add impressum and deploy URL

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "react-scripts": "1.1.1"
   },
-  "homepage": "/keyspeaker",
+  "homepage": "http://keyspeaker.perfect-kreim.de/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
